sandbox-codebase/objects/mone__Mailchimp_Account__c/mone__Mailchimp_Account__c.object-meta.xml
<CustomObject>
    <description>Holds the Mailchimp Account details (noting that you can have multiple connected
        Mailchimp accounts)</description>
    <label>Mailchimp Account</label>
    <nameField>
        <label>Account Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>