sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>