sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Api_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>mone__Api_Endpoint__c</fullName>
    <inlineHelpText>E.g. https://us8.api.mailchimp.com</inlineHelpText>
    <label>Api Endpoint</label>
    <type>Url</type>
</CustomField>