sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>mone__Avatar_URL__c</fullName>
    <inlineHelpText>URL of the avatar for the user.</inlineHelpText>
    <label>Avatar URL</label>
    <type>Url</type>
</CustomField>