sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Data_Center_Prefix__c.field-meta.xml
<CustomField>
    <fullName>mone__Data_Center_Prefix__c</fullName>
    <inlineHelpText>E.g. us8</inlineHelpText>
    <label>Data Center Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>