sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>mone__Last_Sync__c</fullName>
    <inlineHelpText>This is the date and time the sync last ran for Orders. Use this to perform incremental syncs.</inlineHelpText>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>