sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Login_Email__c.field-meta.xml
<CustomField>
    <fullName>mone__Login_Email__c</fullName>
    <label>Login Email</label>
    <type>Email</type>
</CustomField>