sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Login_Name__c.field-meta.xml
<CustomField>
    <fullName>mone__Login_Name__c</fullName>
    <label>Login Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>