sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Mailchimp_User_Id__c.field-meta.xml
<CustomField>
    <fullName>mone__Mailchimp_User_Id__c</fullName>
    <description>Mailchimp User Id for the Account.</description>
    <label>Mailchimp User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>