sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>mone__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mailchimp_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>