sandbox-codebase/objects/mone__Mailchimp_Account__c/fields/mone__Status__c.field-meta.xml
<CustomField>
    <fullName>mone__Status__c</fullName>
    <inlineHelpText>Set to delete when the org is in the process of being disconnected.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Disconnecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>