sandbox-codebase/objects/mone__Mailchimp_Account__c/listViews/mone__All.listView-meta.xml
<ListView>
    <fullName>mone__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>